// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays an error message without a community name with checkAndSubmit 1`] = `
<RCTScrollView>
  <View>
    <KeyboardFriendlyView>
      <Text>
        Let's get started!
      </Text>
      <Text>
        All good things start somewhere! Let's kick things off with a catchy name for your community.
      </Text>
      <View>
        <Text>
          What's the name of your community?
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          onChangeText={[Function]}
          rejectResponderTermination={true}
          returnKeyType="next"
          underlineColorAndroid="rgba(0,0,0,0)"
          value=""
        />
      </View>
      <View>
        <View>
          <View />
          <View>
            <Text>
              Please enter a community name
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View>
              <Text>
                Continue
              </Text>
            </View>
          </View>
        </View>
      </View>
    </KeyboardFriendlyView>
  </View>
</RCTScrollView>
`;

exports[`has navigationOptions 1`] = `
Object {
  "color": "#FFFFFF",
  "fontSize": 10,
  "headerBackgroundColor": "#0DC39F",
  "headerLeft": [Function],
  "headerStyle": Object {
    "backgroundColor": "#0DC39F",
    "borderBottomWidth": 0,
    "elevation": 0,
    "shadowOffset": Object {
      "height": 0,
    },
    "shadowRadius": 0,
  },
  "title": <Text>
    STEP 1/3
  </Text>,
}
`;

exports[`matches last snapshot 1`] = `
<ScrollView>
  <KeyboardFriendlyView>
    <Text>
      Let's get started!
    </Text>
    <Text>
      All good things start somewhere! Let's kick things off with a catchy name for your community.
    </Text>
    <View>
      <Text>
        What's the name of your community?
      </Text>
      <Component
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        onChangeText={[Function]}
        rejectResponderTermination={true}
        returnKeyType="next"
        underlineColorAndroid="rgba(0,0,0,0)"
      />
    </View>
    <Button
      onPress={[Function]}
      text="Continue"
    />
  </KeyboardFriendlyView>
</ScrollView>
`;
